--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -7,7 +7,7 @@ advanced_options=true
 dedicated_server=false
 custom_features=""
 export_filter="resources"
-export_files=PackedStringArray("res://senes/main/main.gd", "res://senes/main/main.tscn", "res://senes/compoents/self.tscn", "res://senes/compoents/self.gd", "res://senes/compoents/player.tscn", "res://senes/compoents/player.gd")
+export_files=PackedStringArray("res://assets/characters/Idle.png", "res://assets/characters/Walk.png", "res://assets/fonts/HYPixel11pxU-2.ttf", "res://assets/others/Props-All.png", "res://assets/tilesets/Spring - simplified.png", "res://assets/tilesets/Tileset Spring.png")
 include_filter=""
 exclude_filter=""
 export_path="../fv完成/FishingValleyOL.exe"
